_v2/models/tests/snapshots/quirks__quirk_1_10_wrapper_with_one_branch.snap
---
source: tests/quirks.rs
expression: datatype
---
{
  "OneOf": {
    "discriminator_field": "type",
    "options": {
      "TRANSITION_DATA": {
        "Object": {
          "properties": {
            "criteria": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            }
          }
        }
      }
    }
  }
}
