_v2/models/tests/snapshots/quirks__quirk_1_1_discriminator_without_one_of.snap
---
source: tests/quirks.rs
expression: datatype
---
{
  "OneOf": {
    "discriminator_field": "featureType",
    "options": {
      "DATA": {
        "Object": {
          "properties": {
            "dataField": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            }
          }
        }
      },
      "LOG": {
        "Object": {
          "properties": {
            "logField": {
              "Optional": {
                "data_type": {
                  "Boolean": {}
                }
              }
            }
          }
        }
      }
    }
  }
}
