_v2/models/tests/snapshots/quirks__quirk_1_2_one_of_without_discriminator.snap
---
source: models/tests/quirks.rs
expression: datatype
---
{
  "Object": {
    "properties": {
      "common": {
        "String": {}
      },
      "onlyA": {
        "Optional": {
          "data_type": {
            "Integer": {
              "minimum": null,
              "maximum": null
            }
          }
        }
      },
      "onlyB": {
        "Optional": {
          "data_type": {
            "Boolean": {}
          }
        }
      }
    }
  }
}
