_v2/models/tests/snapshots/quirks__quirk_1_3_type_object_next_to_one_of.snap
---
source: tests/quirks.rs
expression: datatype
---
{
  "OneOf": {
    "discriminator_field": "cloudProvider",
    "options": {
      "aws": {
        "Object": {
          "properties": {
            "awsAccountId": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            }
          }
        }
      },
      "azure": {
        "Object": {
          "properties": {
            "tenantId": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            }
          }
        }
      }
    }
  }
}
