_v2/models/tests/snapshots/quirks__quirk_1_4_unsatisfiable_union_type_object_over_string_branches.snap
---
source: tests/quirks.rs
expression: datatype
---
{
  "Enum": [
    "FRANKFURT_DEU",
    "SYDNEY_AUS",
    "eastus",
    "westus"
  ]
}
