_v2/models/tests/snapshots/quirks__quirk_1_5_children_redeclare_discriminator_property.snap
---
source: tests/quirks.rs
expression: datatype
---
{
  "OneOf": {
    "discriminator_field": "type",
    "options": {
      "TRANSITION_DATA": {
        "Object": {
          "properties": {
            "criteria": {
              "String": {}
            }
          }
        }
      }
    }
  }
}
