_v2/models/tests/snapshots/quirks__quirk_1_6_parent_child_cycle.snap
---
source: tests/quirks.rs
expression: datatype
---
{
  "OneOf": {
    "discriminator_field": "providerName",
    "options": {
      "AWS": {
        "Object": {
          "properties": {
            "ebsVolumeType": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            },
            "regionName": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            }
          }
        }
      },
      "TENANT": {
        "Object": {
          "properties": {
            "backupEnabled": {
              "Optional": {
                "data_type": {
                  "Boolean": {}
                }
              }
            },
            "regionName": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            }
          }
        }
      }
    }
  }
}
