_v2/models/tests/snapshots/quirks__quirk_1_7_mapping_targets_that_are_not_children.snap
---
source: tests/quirks.rs
expression: datatype
---
{
  "OneOf": {
    "discriminator_field": "cloudProvider",
    "options": {
      "aws": {
        "Object": {
          "properties": {
            "awsAccountId": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            }
          }
        }
      },
      "gcp": {
        "Object": {
          "properties": {
            "projectNumber": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            }
          }
        }
      }
    }
  }
}
