_v2/models/tests/snapshots/quirks__quirk_1_9_any_of_used_as_a_tagged_union.snap
---
source: tests/quirks.rs
expression: datatype
---
{
  "Array": {
    "entries_type": {
      "OneOf": {
        "discriminator_field": "type",
        "options": {
          "asciiFolding": {
            "Object": {
              "properties": {
                "regularExpression": {
                  "Optional": {
                    "data_type": {
                      "String": {}
                    }
                  }
                }
              }
            }
          },
          "englishPossessive": {
            "Object": {
              "properties": {
                "type": {
                  "Enum": [
                    "englishPossessive"
                  ]
                }
              }
            }
          }
        }
      }
    }
  }
}
