_v2/models/tests/snapshots/quirks__quirk_2_2_single_value_enum.snap
---
source: tests/quirks.rs
expression: datatype
---
{
  "Object": {
    "properties": {
      "mode": {
        "Enum": [
          "AVERAGE"
        ]
      }
    }
  }
}
