_v2/models/tests/snapshots/quirks__quirk_2_3_unions_of_inline_enums.snap
---
source: tests/quirks.rs
expression: datatype
---
{
  "Enum": [
    "US_EAST_1",
    "US_WEST_1",
    "eastus",
    "westus"
  ]
}
